--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
     <p><strong style="color:white; background-color: darkcyan; display: block;">Computer Skills</strong></p>
     
     <pre style="font-size:17px; font-family: calibri;">
-    <strong>    Operating Systems	:</strong> Microsoft Windows (XP, 7, 8, 8.1, 10)
+    <strong>    Operating Systems	:</strong> Microsoft Windows (XP, 7, 8.1, 10)
         <strong>Internet			        : </strong>Internet Browsing, E-mailing, You-tubing, Face-booking etc.
-        <strong>Other Programs 	        : </strong>(I)Microsoft Office 2016
-                                                  (II)Adobe Photoshop CC-2014
-                                                  (III)Adobe Illustrator CC-2020
+        <strong>Other Programs 	        : </strong>(I)Microsoft Office- Word, Excel, Powerpoint and Access 2016
+                                                  (II)Adobe Photoshop CC-2019-2020
+                                                  (III)Adobe Illustrator CC-2019-2020
 
 </pre>
     <!--Personal Details -->
