--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <img src="images/pp.JPG" alt="SMD" style="width: 150px; float: right">
     <h1><u>Curriculum Vitae</u></h1>
-    <h2 style="color: blue; font-family:Arial">SHEKH MD NAYM YOUSUF</h2>
+    <h2 style="color: blue; font-family:Arial">SHEKH MD NAYEM YOUSUF</h2>
     <h3><u>Contact and Address</u></h3>
 
     <p style="font-size:17px;">
